Fixed spacing on login text input
Fixes GYMX-196 in JIRA.

--- a/static/sass/_register.scss
+++ b/static/sass/_register.scss
@@ -124,7 +124,6 @@ body.register,
       -webkit-box-sizing: border-box;
       box-sizing: border-box;
       box-shadow:none;
-      padding-left:0;
       background:none;
     }
   }
